ADD: functionality update song done
