# internal/router/routes.go
@@ -35,6 +35,8 @@ func Init(h *handler.Handler) *gin.Engine {
 		api.POST("/song", h.CreateSong)
 		api.DELETE("/song/:id", h.DeleteSong)
 		api.GET("/song/:id", h.GetSongByID)
+		api.PUT("/song/:id", h.UpdateSong)
+		//api.GET("/songs", h.GetAllSongs)
 	}
 
 	return r
